<resources>
    <string name="app_name">XpensAuditor</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <!--    <string name="change_email">Change Email</string>-->
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in XpensAuditor now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
...
    <string name="group_analytics">Group Analytics</string>
    <string name="add_member_to_group">Add Member to Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="add_new_member">Add new member</string>
    <string name="select_category">Select Category</string>
    <string name="search">Search Here</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="personal">PERSONAL</string>
    <string name="group_cap">GROUP</string>
    <string name="profile">PROFILE</string>
    <string name="analytics">ANALYTICS</string>
    <string name="settings">SETTINGS</string>
    <string name="refresh_data">REFRESH DATA</string>
...
