<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransactionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Amount in $"
                android:inputType="numberDecimal"
                android:id="@+id/addTransAmt"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Memo"
                android:id="@+id/addShopName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCategory"
                android:hint="@string/select_category"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:background="@android:drawable/editbox_background"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

            <DatePicker
                android:id="@+id/dateTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true">
            </DatePicker>


            <Button
                android:id="@+id/btAddTransaction"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:text="@string/add_transaction"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>